--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Node.js-and-HTTP",
+  "name": "Node.js-and-File-System",
   "version": "1.0.0",
   "description": "Starter package.json template",
   "main": "main.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/acciojob/Node.js-and-HTTP.git"
+    "url": "git+https://github.com/acciojob/Node.js-and-File-System.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/acciojob/Node.js-and-HTTP/issues"
+    "url": "https://github.com/acciojob/Node.js-and-File-System/issues"
   },
-  "homepage": "https://github.com/acciojob/Node.js-and-HTTP#readme",
+  "homepage": "https://github.com/acciojob/Node.js-and-File-System#readme",
   "devDependencies": {
     "jest": "^29.5.0"
   },
